# agenthub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  README.zh-CN.md  docker-compose.mac-image.yml  docker-compose.windows-image.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 1d2e3f4a5b6c_add_workspace_preview_sessions.py  2f3a4b5c6d7e_add_workspace_deployments.py  3a4b5c6d7e8f_harden_workspace_releases.py  4b5c6d7e8f90_add_container_deployment_runtime_metadata.py  5c6d7e8f9012_add_orchestrator_review_metadata.py  6d7e8f9012ab_add_workspace_workflow_runs.py  7e8f9012abcd_add_deployment_worker_state.py  829867f35d97_init.py  8f9012abcde3_add_message_queue_entries.py  9a1b2c3d4e5f_add_orchestrator_memory.py  9b0123cdef45_add_conversation_turn_controls.py  9f012abcde34_add_uploads.py  a0b1c2d3e4f5_add_memory_hub.py  b6c7d8e9f012_add_message_turn_options.py  c2f8e1d9a4b7_add_conversation_memories.py  c5d6e7f809ab_add_agent_asset_tables.py  d1e2f3a4b5c6_add_user_model_accounts.py  e2f3a4b5c6d7_reset_custom_agents_for_wrappers.py  f3a4b5c6d7e8_archive_polluted_rules_v1_memories.py  f4a3b2c1d0e9_add_workspaces.py  g4b5c6d7e8f9_add_remote_shared_session_tables.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  artifact_parser.py  base.py  config_fields.py  config_validation.py  orchestrator.py  orchestrator_planner.py  orchestrator_react.py  orchestrator_tool_loop.py  orchestrator_types.py  registry.py  requirement_alignment.py  runtime_guard.py  types.py
backend/app/api/: releases.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  agent.py  agent_asset.py  conversation.py  conversation_memory.py  memory.py  message.py  message_queue.py  model_account.py  orchestrator_memory.py  session.py  turn_control.py  upload.py  user.py  workspace.py
backend/app/schemas/: agent.py  auth.py  common.py  conversation.py  events.py  local_runtime_connector.py  memory.py  message.py  model_account.py  server_info.py  share.py  upload.py  workspace.py
backend/app/seeds/: seed_agents.py
backend/app/services/: README.md  agent_asset_service.py  artifact_manifest.py  audit_service.py  browser_preview_verifier.py  builtin_agent_config.py  context_builder.py  context_compression.py  event_service.py  local_runtime_connector_service.py  memory_hub.py  message_lifecycle.py  model_accounts.py  model_gateway.py  orchestrator_memory.py  orchestrator_platform_tools.py  queued_messages.py  (+14 more)
backend/scripts/: __init__.py  deployment_release_api_e2e.py  orchestrator_live_e2e.py
backend/tests/: conftest.py  orchestrator_fakes.py  test_adapter_live_smoke.py  test_adapter_smoke.py  test_agent_assets_api.py  test_agent_config_validation.py  test_artifact_parser.py  test_b1_quality.py  test_builtin_agent.py  test_builtin_workspace_contract.py  test_claude_adapter.py  test_claude_code_external_adapter.py  test_cli_runtime.py  test_codex_external_adapter.py  test_context_builder.py  test_context_compression.py  test_conversation_api.py  test_custom_adapter.py  test_deepseek_adapter.py  test_e2e_message_chain.py  test_external_direct_chat.py  test_health.py  test_memory_hub.py  test_model_accounts_api.py  test_model_gateway.py  test_openai_adapter.py  test_opencode_external_adapter.py  test_orchestrator.py  test_orchestrator_evaluation.py  test_orchestrator_facades.py  test_orchestrator_live_e2e_script.py  test_orchestrator_memory.py  test_orchestrator_memory_sanitization.py  test_orchestrator_output_contracts.py  test_orchestrator_planning.py  test_orchestrator_platform_facts.py  test_orchestrator_platform_tools.py  test_orchestrator_quality_gate.py  test_orchestrator_react.py  test_orchestrator_response_presentation.py  (+18 more)
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+583 files in other folders)
