[project]
name = "agenthub-backend"
version = "0.1.0"
description = "AgentHub backend — FastAPI"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt<5.0.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.0",
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "openai>=1.51.0",
    "openai-agents>=0.17.4",
    "playwright>=1.49.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "types-python-jose",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

# ─── Ruff ───
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit
    "N",   # pep8-naming
]
ignore = [
    "S101",  # use of assert (pytest needs it)
    "S105",  # hardcoded password (false positive in dev)
    "B008",  # do not perform function call in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N"]

# ─── Mypy ───
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*"]
ignore_missing_imports = true

# ─── Pytest ───
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: tests that call live external providers or are too slow for default runs",
]

[dependency-groups]
dev = [
    "socksio>=1.0.0",
]
