[package]
name = "agenthub"
version = "0.1.0"
description = "AgentHub desktop shell"
authors = ["AgentHub Team"]
edition = "2021"

[lib]
name = "agenthub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
